# gerenciador_tarefas

./: CMakeLists.txt  README.md  adicionarTarefa.h  compararDatas.h  editarTarefa.h  excluirTarefa.h  global.h  imprimirLista.h  listarPorPalavraChave.h  listarTarefas.h  listarTarefasConcluidas.h  listarTarefasPendentes.h  main.c  ordenarPorData.h  ordenarPorPrioridade.h  pesquisarPalavraChave.h  procurarPorId.h  salvarDados.h  selecionarTarefa.h
